<resources>
    <string name="app_name">Binding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ed_name">"Full name"</string>
    <string name="tv_view2">"اطلاعات خود را وارد کنید "</string>
    <string name="st_text">"فرم ثبت نام "</string>
    <string name="btn_next">"مرحله بعد"</string>
    <string name="btn_before">"مرحله قبل"</string>
    <string name="tx_hint">"نام خود را وارد کنید "</string>
    <string name="text_hint2">نام خانوادگی خود را وارد کنید</string>

</resources>